# IMPatienT

./: .env_sample  .flaskenv  .gitignore  .pre-commit-config.yaml  Aptfile  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Pipfile  Procfile  README  README.md  app.db  app.db.dvc  boot.sh  config.py  config_ontology  deploy_hf_space.py  dev_boot.sh  ehroes.py  environement_linux.yml  environment.yml  environment_full.yml  environment_simple.yml  envrionement_windows.yml  envrionment_windows.yml  histoannot.py  impatient.py  main.py  mkdocs.yml  myoxia.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeQL.yml  deploy-mkdocs.yml  docker-build-push.yml  docker-image.yml  format-check.yml  formatting.yml  security-check.yml
app/: __init__.py  email.py  forms.py  histofunc.py  models.py  ocrfunc.py  routes.py  tasks.py
app/auth/: __init__.py  email.py  forms.py  routes.py
app/auth/templates/: email_reset_password.html  email_reset_password.txt  login.html  register.html  reset_password.html  reset_password_request.html
app/dashapp/: __init__.py  app.py  callbacks.py  common_func.py  layout.py  plot_common.py  routes.py  shapes_to_segmentations.py  use_ml_image_segmentation_classifier.py
app/dashapp/static/: explanations.md  segmentation-style.css
app/errors/: __init__.py  handlers.py
app/errors/templates/: 404.html  413.html  500.html
app/historeport/: __init__.py  boqa.py  forms.py  ocr.py  onto_func.py  report.py  routes.py
app/historeport/static/: histo_index.js  historeport.js  slider.css
app/historeportv2/: __init__.py  routes.py
app/histostats/: __init__.py  routes.py  vizualisation.py
app/imgannot/: __init__.py  forms.py  histo.py  routes.py
app/imgannot/static/: annot.js
app/imgupload/: __init__.py  forms.py  routes.py
app/index/: __init__.py  routes.py
app/ocr/: __init__.py  forms.py  ocr.py  routes.py
app/onthocreate/: __init__.py  routes.py
app/ontocreate/: __init__.py  forms.py  routes.py
app/orthocreate/: __init__.py  forms.py  routes.py
app/src/: common.py  deepzoom.py
app/static/: annotorious.min.css  custom.css
app/templates/: 404.html  500.html  annot.html  base.html  index.html  login.html  ocr_results.html  ocr_sucess.html  ocr_upload.html  register.html  reset_password.html  results.html  upload_img.html
config/: config_coloration.txt  config_gene.txt  config_lang_ocr.tsv  config_ontology.tsv  correlation_matrix.json.dvc  diagnostic.tsv  negex_en.txt  negex_fr.txt  negex_sep_en.txt  ontology.json  ontology.json.dvc  ontology_template.json  report_form_config.tsv  report_form_config.tsv:Zone.Identifier  stat_per_diag.json  stat_per_diag.json.dvc  stat_per_gene.json  stat_per_gene.json.dvc
data/database/: app.db.demo  app.db.dvc
data/ontology/: ontology.json.demo  ontology.json.dvc  ontology_default.json
docker/: boot.sh  build.sh  create_volume.sh  dev_build_run.sh  run_sample.sh
docs/quickstart/: advanced.md
migrations/: env.py
migrations/versions/: 149b26239198_rename_column_tree.py  1a883c035a44_initial_db.py  24e69f864698_users_table.py  4ce3b01f4706_mask_annot_data_path.py  5109bd33a974_initial_migration.py  587c7acc5266_deleted_pdf_table.py  5f7028c4e54c_db_sanitize.py  68543b62701d_init.py  69a7a85fc8e7_initial_db_model.py  6e9c1c9c07cc_added_image_color_and_age_column.py  77cb4925bb52_segmentation_file_path.py  78a123694ce2_bland_to_blend.py  7be94a94e860_init.py  836690eeac39_new_histo.py  836be1af53a7_datetime_for_historeport.py  847f2a6b8036_rework_of_histo_report_table.py  86d689db99f3_image_and_patient_tables.py  9206a46bb5f7_init.py  999561e3d610_.py  a910926ae7e1_boqa_field_score.py  b27118dec823_class_info_path_for_images.py  bcbd0955f082_report_histo_table.py  ce2391642aea_new_image_table.py  d23f27e36c11_added_gene_field_to_report.py  d3f5d79b9f94_update_with_new_fields_and_date.py  dd48a4e166ad_boqa_field.py  e5bc0c54dedf_first_migration.py  e6337fb0fc1c_column_name_rectification.py  ee4b4b624ee0_inital_migrate.py  f7981800ac1e_v1_0.py  f7ad27b89622_user_image_patient_tables.py  f86e7a4777f4_user_image_patient.py
models/: features_col.list.dvc  random_forest.sav.dvc
notebooks/: BOQA_Pred_Fill.ipynb  Datamine_Ontology.ipynb  Migration_onto.ipynb  OCR_development.ipynb  Vocab_datamining.ipynb  Vocab_properties_migration.ipynb  historeport.ipynb  import_ontology.ipynb  keywords.ipynb  spacy.ipynb  test_OCR.ipynb
old/: main.py  testing.py
results/: 31_01_NADH-TR_x_400.jpg.json  31_01_NADH-TR_x_400.jpg_Corentin_Meyer.txt  666_31_01_NADH-TR_x_400.jpg.json  666_31_01_NADH-TR_x_400.jpg.txt
src/impatient/: config.py  impatient_app.py
static/: custom.css  jquery-3.5.1.min.js:Zone.Identifier
templates/: annot copy.html  annot.html  base.html  index.html  results.html
tests/: test_auth.py  test_historeport.py  test_imgannot.py  test_index.py  test_user.py
tests/data/: sample_historeport.json  sample_template.json
uploads/: 666_31_01_NADH-TR_x_400.jpg.dzi
(+99 files in other folders)
