[tool.poetry]
name = "impatient"
version = "1.6.1"
description = "IMPatienT: an integrated web application to digitize, process and explore multimodal patient data"
authors = ["Corentin Meyer <co.meyer@unistra.fr>"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pip = "*"
setuptools = "*"
wheel = "*"
scikit-learn = "^1"
scikit-image = "^0"
dash = "^2"
Flask = "^2"
Flask-WTF = "^0"
WTForms = "^2"
wtforms-validators = "^1"
Flask-Login = "^0"
Flask-SQLAlchemy = "^2"
Flask-Mail = "^0"
python-dotenv = "^0"
pandas = "^1.3"
numpy = "^1"
plotly = "^5"
CairoSVG = "^2"
Pillow = "^9"
joblib = "^1"
dash-core-components = "^2"
dash-bootstrap-components = "^1"
Flask-Migrate = "^4"
Flask-Session = "^0"
pytesseract = "^0"
pdf2image = "^1"
spacy = "^3"
thefuzz = "^0"
email-validator = "^1"
dash-html-components = "^2"
gunicorn = "^20"
opencv-python-headless = "^4"
python-Levenshtein = "^0.12.2"
PyJWT = "^2.3.0"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl" }
fr_core_news_sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.2.0/fr_core_news_sm-3.2.0-py3-none-any.whl" }
Flask-Cors = "^3.0.10"
textacy = "^0.12.0"
bleach = "^5.0.1"
pronto = "^2.5.5"
jsonschema = "^4.19.0"
scalene = "^1.5.31.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.221"
mkdocs-material = "^9.0.5"
black = {extras = ["jupyter"], version = "*"}
ipykernel = "^6"
unittest2 = "^1"
pytest = "^6.2.5"
bandit = "^1.7.1"
pre-commit = "^2.16.0"
mypy = "^0.991"
mkdocstrings = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
